komplikovanjšie udaje gridu

--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -18,7 +18,7 @@ bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 bShowSelectionSubcomponents=True
 AssetViewerProfileName=
-PreviewFeatureLevel=4
+PreviewFeatureLevel=3
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -310,7 +310,7 @@ BPRegatta_C=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.Post
 PropertyWrapper=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 SceneComponent=
-K2Node_VariableSet=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,SceneCaptureComponent2D.PostProcessVolume.Lens|Mobile Depth of Field,SceneCaptureComponent2D.PostProcessVolume.Lens|Bloom,SceneCaptureComponent2D.PostProcessVolume.Lens|BloomAdvanced,SceneCaptureComponent2D.PostProcessVolume.Lens|Exposure,SceneCaptureComponent2D.PostProcessVolume.Lens|Chromatic Aberration,SceneCaptureComponent2D.PostProcessVolume.Lens|Camera,SceneCaptureComponent2D.PostProcessVolume.Lens|Local Exposure,SceneCaptureComponent2D.PostProcessVolume.Lens|Depth of Field,SceneCaptureComponent2D.PostProcessVolume.Global Illumination,SceneCaptureComponent2D.PostProcessVolume.Global Illumination|Lumen Global Illumination,SceneCaptureComponent2D.PostProcessVolume.Rendering Features,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Ambient Occlusion,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Ambient OcclusionAdvanced,SceneCaptureComponent2D.TransformCommon.Transform,SceneCaptureComponent2D.SceneCapture.General Show Flags,SceneCaptureComponent2D.SceneCapture.Advanced Show Flags,SceneCaptureComponent2D.SceneCapture.Post Processing Show Flags,SceneCaptureComponent2D.SceneCapture.Light Types Show Flags,SceneCaptureComponent2D.SceneCapture.Lighting Components Show Flags,SceneCaptureComponent2D.SceneCapture.Lighting Features Show Flags,SceneCaptureComponent2D.SceneCapture.Nanite Show Flags,SceneCaptureComponent2D.SceneCapture.Hidden Show Flags,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
+K2Node_VariableSet=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,SceneCaptureComponent2D.PostProcessVolume.Lens
 K2Node_InputAction=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 K2Node_FunctionEntry=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 CapsuleComponent=
@@ -382,7 +382,7 @@ K2Node_InputAxisEvent=StaticMeshComponent.Collision.Collision,BoxComponent.Colli
 K2Node_CallFunction=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 K2Node_FunctionResult=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 Rudder Angle To Turning Slider Pct=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
-SceneCaptureComponent2D=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,SceneCaptureComponent2D.PostProcessVolume.Lens|Mobile Depth of Field,SceneCaptureComponent2D.PostProcessVolume.Lens|Mobile Depth of FieldAdvanced,SceneCaptureComponent2D.PostProcessVolume.Lens|Bloom,SceneCaptureComponent2D.PostProcessVolume.Lens|BloomAdvanced,SceneCaptureComponent2D.PostProcessVolume.Lens|Exposure,SceneCaptureComponent2D.PostProcessVolume.Lens|Chromatic Aberration,SceneCaptureComponent2D.PostProcessVolume.Lens|Camera,SceneCaptureComponent2D.PostProcessVolume.Lens|Local Exposure,SceneCaptureComponent2D.PostProcessVolume.Lens|Depth of Field,SceneCaptureComponent2D.PostProcessVolume.Lens|Image Effects,SceneCaptureComponent2D.PostProcessVolume.Global Illumination,SceneCaptureComponent2D.PostProcessVolume.Global Illumination|Lumen Global Illumination,SceneCaptureComponent2D.PostProcessVolume.Rendering Features,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Ambient Occlusion,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Ambient OcclusionAdvanced,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Ambient Cubemap,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Motion Blur,SceneCaptureComponent2D.PostProcessVolume.Color Grading,SceneCaptureComponent2D.PostProcessVolume.Color Grading|Misc,SceneCaptureComponent2D.PostProcessVolume.Path Tracing,SceneCaptureComponent2D.PostProcessVolume.Path Tracing|Lighting Components,SceneCaptureComponent2D.TransformCommon.Transform,SceneCaptureComponent2D.SceneCapture.General Show Flags,SceneCaptureComponent2D.SceneCapture.Advanced Show Flags,SceneCaptureComponent2D.SceneCapture.Post Processing Show Flags,SceneCaptureComponent2D.SceneCapture.Light Types Show Flags,SceneCaptureComponent2D.SceneCapture.Lighting Components Show Flags,SceneCaptureComponent2D.SceneCapture.Lighting Features Show Flags,SceneCaptureComponent2D.SceneCapture.Nanite Show Flags,SceneCaptureComponent2D.SceneCapture.Hidden Show Flags,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
+SceneCaptureComponent2D=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,SceneCaptureComponent2D.PostProcessVolume.Lens
 UserDefinedStruct=
 BP_Tile_C=
 MapGenerator_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
@@ -417,7 +417,7 @@ CameraActor=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Colli
 ConfigurationMenu_C=
 MinimapWidget_C=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
 K2Node_InputKey=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
-PlayerController=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,SceneCaptureComponent2D.PostProcessVolume.Lens|Mobile Depth of Field,SceneCaptureComponent2D.PostProcessVolume.Lens|Bloom,SceneCaptureComponent2D.PostProcessVolume.Lens|BloomAdvanced,SceneCaptureComponent2D.PostProcessVolume.Lens|Exposure,SceneCaptureComponent2D.PostProcessVolume.Lens|Chromatic Aberration,SceneCaptureComponent2D.PostProcessVolume.Lens|Camera,SceneCaptureComponent2D.PostProcessVolume.Lens|Local Exposure,SceneCaptureComponent2D.PostProcessVolume.Lens|Depth of Field,SceneCaptureComponent2D.PostProcessVolume.Global Illumination,SceneCaptureComponent2D.PostProcessVolume.Global Illumination|Lumen Global Illumination,SceneCaptureComponent2D.PostProcessVolume.Rendering Features,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Ambient Occlusion,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Ambient OcclusionAdvanced,SceneCaptureComponent2D.TransformCommon.Transform,SceneCaptureComponent2D.SceneCapture.General Show Flags,SceneCaptureComponent2D.SceneCapture.Advanced Show Flags,SceneCaptureComponent2D.SceneCapture.Post Processing Show Flags,SceneCaptureComponent2D.SceneCapture.Light Types Show Flags,SceneCaptureComponent2D.SceneCapture.Lighting Components Show Flags,SceneCaptureComponent2D.SceneCapture.Lighting Features Show Flags,SceneCaptureComponent2D.SceneCapture.Nanite Show Flags,SceneCaptureComponent2D.SceneCapture.Hidden Show Flags,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination,EdGraph.Inputs.892662B7439533CA6E366FB9CDD29F67
+PlayerController=StaticMeshComponent.Collision.Collision,SceneCaptureComponent2D.PostProcessVolume.Lens,SceneCaptureComponent2D.PostProcessVolume.Lens
 BP_Wall_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 BP_Start_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
 Actor=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraActor.PostProcess.Global Illumination
@@ -440,7 +440,7 @@ LastLevel=/Game/Levels/MainMenuMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Appearance.Brush\" \"Object.Layout.Slot\" "
+Object="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
@@ -1988,11 +1988,12 @@ SceneCaptureComponent2D.LOD=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -2000,7 +2001,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
@@ -2094,19 +2094,19 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem1=/Game/Blueprints/SailingGameInstance
-MRUItem2=/Game/Minimap/MinimapWidget
-MRUItem3=/Game/Blueprints/Regatta/RegattaUI
-MRUItem4=/Game/Map/PhysicsEngine
-MRUItem5=/Game/Map/BP_Tile
-MRUItem6=/Game/Blueprints/Regatta/BPRegatta
-MRUItem7=/Game/Levels/RaceMap
-MRUItem8=/Game/Map/BP_Wall
-MRUItem9=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem10=/Game/Blueprints/CinematicCamera/CinematicCameraActor
-MRUItem11=/Game/Map/MapGenerator
-MRUItem12=/Game/Map/RaceDataTable
+MRUItem0=/Game/Map/RaceDataTable
+MRUItem1=/Game/Minimap/MinimapWidget
+MRUItem2=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem3=/Game/Blueprints/Regatta/BPRegatta
+MRUItem4=/Game/Blueprints/SailingGameInstance
+MRUItem5=/Game/Blueprints/Regatta/RegattaUI
+MRUItem6=/Game/Map/PhysicsEngine
+MRUItem7=/Game/Map/BP_Tile
+MRUItem8=/Game/Levels/RaceMap
+MRUItem9=/Game/Map/BP_Wall
+MRUItem10=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem11=/Game/Blueprints/CinematicCamera/CinematicCameraActor
+MRUItem12=/Game/Map/MapGenerator
 MRUItem13=/Game/Map/RaceStructure
 MRUItem14=/Game/Levels/MainMenuMap
 MRUItem15=/Game/Map/BP_Start
@@ -2509,8 +2509,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2540,8 +2540,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=22.000
-WindowSize=X=1276.000 Y=716.000
+ScreenPosition=X=0.000 Y=21.600
+WindowSize=X=1277.600 Y=717.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3715,9 +3715,9 @@ UndoHistoryEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=D:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/More Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=D:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [InputDebuggingEditor]
 SuppressInputDeviceConnectionChangeNotification=True
