--- a/Unreal Engine/Sailing/Config/DefaultInput.ini
+++ b/Unreal Engine/Sailing/Config/DefaultInput.ini
@@ -90,6 +90,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Swap To Chase Camera",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="DEBUG BOAT SWAP",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightBracket)
 +ActionMappings=(ActionName="Swap To Cinematic Camera",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="Switch To Orthogonal View",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=O)
++ActionMappings=(ActionName="End Simulation",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="Rudder Axis",Scale=1.000000,Key=A)
 +AxisMappings=(AxisName="Rudder Axis",Scale=-1.000000,Key=D)
 +AxisMappings=(AxisName="Sail Tension Axis",Scale=1.000000,Key=W)
