--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -98,7 +98,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=165,Y=16)
+NewWindowPosition=(X=-9,Y=-9)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -125,15 +125,15 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1923,Y=989)
 LastExecutedLaunchDevice=Windows@BINGUS
 LastExecutedLaunchName=BINGUS
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=165,Y=16)
-NewWindowWidth=1649
-NewWindowHeight=992
+MultipleInstancePositions=(X=-9,Y=-9)
+NewWindowWidth=1923
+NewWindowHeight=989
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 CurrentScalingGridSize=5
@@ -661,12 +661,12 @@ MaterialExpressionMultiply="\"Object\" "
 MaterialExpressionComment="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" "
-Widget="\"Object\" \"Object.Layout.Slot\" "
-Visual="\"Object\" \"Object.Layout.Slot\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.TintColor\" \"Object.Style.WidgetStyle.BackgroundImage.OutlineSettings\" \"Object.Appearance.FillColorAndOpacity\" "
 EdGraphNode_Comment="\"Object\" "
 RegattaUI_C="\"Object\" "
-UserWidget="\"Object\" \"Object.Layout.Slot\" "
+UserWidget="\"Object\" "
 RadialSlider="\"Object\" \"Object.Appearance.SliderProgressColor\" \"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" "
 SpringArmComponent="\"Object\" "
 SceneCaptureComponent2D="\"Object\" \"Object.PostProcessVolume.PostProcessSettings\" "
@@ -699,7 +699,7 @@ MaterialExpressionAdd="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MinimapWidget_C="\"Object\" \"Object.Layout.Slot\" "
+MinimapWidget_C="\"Object\" "
 Button="\"Object\" \"Object.Layout.Slot\" "
 ContentWidget="\"Object\" \"Object.Layout.Slot\" "
 TextBlock="\"Object\" \"Object.Layout.Slot\" "
@@ -2509,8 +2509,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2540,8 +2540,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=21.600
-WindowSize=X=1279.200 Y=719.200
+ScreenPosition=X=204.000 Y=18.400
+WindowSize=X=1280.800 Y=720.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
